--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "fruity-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "proxy": "https://www.fruityvice.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
